# RadiAll

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  icons.json  install.sh  radiall  shell.qml
launcher/: ActionArc.qml  LauncherEditor.qml  RadialMenu.qml  Wheel.qml  tray.py
services/: Compositor.qml  Launcher.qml  Skin.qml  Theme.qml  qmldir
src/: apps.rs  apps_windows.rs  config.rs  icons.rs  ipc.rs  main.rs  ring.rs  shortcuts.rs  shortcuts_portal.rs  shortcuts_win.rs  shortcuts_x11.rs  theme.rs  ui.rs
src/compositor/: hyprland.rs  mod.rs  plasma.rs  windows.rs  wlr.rs  x11.rs
themes/: README.md  catppuccin.json  default.json  dracula.json  gruvbox.json  light.json  matrix.json  nord.json  paper.json  radiall.json  rose-pine.json  tokyo-night.json
ui/: editor.slint  radiall.slint  skin.slint  types.slint  wheel.slint
website/: Dockerfile  index.html  start.sh
website/scripts/: script.js
website/styles/: style.css
