[package]
name = "radiall"
version = "2.0.0-alpha"
edition = "2021"
license = "MIT"
description = "RadiAll — a radial app launcher, window switcher, and per-window action menu. Standalone Rust + Slint."
repository = "https://github.com/Osyna/RadiAll"

[dependencies]
slint = { version = "1.17", default-features = false, features = [
    "std",
    "compat-1-2",
    "accessibility",
    "backend-winit-wayland",
    "backend-winit-x11",
    "renderer-femtovg",
    "system-tray",
    "image-default-formats",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
freedesktop-desktop-entry = "0.7"
freedesktop-icons = "0.4"
resvg = "0.45"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
dirs = "6"
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }

[build-dependencies]
slint-build = "1.17"

[profile.release]
lto = "thin"
strip = true
