[package]
name = "radiall"
version = "2.0.0-alpha"
edition = "2021"
license = "MIT"
description = "RadiAll — a radial app launcher, window switcher, and per-window action menu. Standalone Rust + Slint."
repository = "https://github.com/Osyna/RadiAll"

[dependencies]
slint = { version = "1.17", default-features = false, features = [
    "std",
    "compat-1-2",
    "backend-winit-wayland",
    "backend-winit-x11",
    "renderer-femtovg",
    "renderer-software",
    "system-tray",
    "image-default-formats",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
freedesktop-desktop-entry = "0.7"
freedesktop-icons = "0.4"
resvg = "0.45"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
parking_lot = "0.12"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-protocols-plasma = { version = "0.3", features = ["client"] }
x11rb = "0.13"
zbus = { version = "5", default-features = false, features = ["blocking-api", "async-io"] }
dirs = "6"
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }

[build-dependencies]
slint-build = "1.17"

[profile.release]
lto = "fat"          # whole-program LTO: smaller AND faster than thin
codegen-units = 1    # one unit -> best inlining/dedup, smaller binary
panic = "abort"      # a daemon never unwinds; drops landing-pad tables
strip = true
